2004-12-25  Everaldo Canuto <everaldo_canuto at yahoo.com.br>

        * win32/* build files for Visual Studio, now works in Win32. Thanks 
        Lyle Arnot for provide this files.

2004-12-24  Everaldo Canuto <everaldo_canuto at yahoo.com.br>

        * loader.c fixed constant COMPILE_DL_ELOADER. Thanks to Lyle A. 

2004-12-23  Everaldo Canuto <everaldo_canuto at yahoo.com.br>

        * COPYING license file fixed.
        * Fixed compilation errors under Win32 and old versions of gcc.

2004-12-22 ReinerJ <reinerj at users.sourceforge.net>

        * eaccelerator.ini for distrib which have /etc/php.d

2004-12-22 Franck34 <franck34 at users.sourceforge.net>

        * README file updated

2004-12-22  Everaldo Canuto <everaldo_canuto at yahoo.com.br>

        * Segmentation fault problems fixed.

2004-12-19  Everaldo Canuto <everaldo_canuto at yahoo.com.br>

        * Segv patchs for PHP5 applyed.
        * Some bug fixes to work on PHP4 and PHP5.

2004-12-09  Everaldo Canuto <everaldo_canuto at yahoo.com.br>

        * first public release 0.9.0 based on Turck MMCache.