@@ -1,0 +1,30 @@
+eLoader
+-------
+
+eLoader is PHP extension that can load scripts which encoded by eAccelerator
+without eAccelerator. It is a PHP extension and it should be compatible with 
+Zend Optimizer, Zend Performance Suite, ionCube loader, PHP Accelerator and 
+other PHP extensions.
+
+eLoader is not need with eAccelerator, because eAccelerator already has loader
+compiled in.
+
+To build eLoader from sources on UNIX:
+
+  cd eLoader
+  export PHP_PREFIX="/usr"
+  ./autogen.sh
+  ./configure --with-php-config=$PHP_PREFIX/bin/php-config
+  make
+
+To build eLoader from sources on Windows:
+
+1. Open eLoader.vcproj in win32 directory.
+2. Select "eLoader - Win32 Release" in "Build/Set Active Configuration..."
+   menu and build eloader.dll.
+
+To install it copy eloader.so or eloader.dll into your PHP extension directory,
+add it into php.ini and restart HTTP server.
+
+  extension="eloader.so"  ; for UNIX
+  extension="eloader.dll" ; for Windows
